Just started a webgl experiment. Some ideas to try out before choosing canvas/webgl

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       // enable canvas shim at all? (2d/3d). other settings are ignored if this is false.
       var TOKEN_CANVAS_SHIM = true;
       // true enables webgl shim (exposes `g`), false enables canvas shim (exposes `c`)
-      var TOKEN_WEBGL = false;
+      var TOKEN_WEBGL = true;
       // px, 0 means always 100%
       var TOKEN_MAX_WIDTH = 0;
       // px, 0 means always 100%
@@ -119,91 +119,132 @@
      <script type="demo">
 
       //SUB
-t = 0;
-W = a.width /= 4;
-H = a.height /= 4;
-imageData = c.createImageData(W, H);
-pixels = imageData.data;
+//Original source before manual size optimizations
 
-function sphere(x, y, z, size) {
-    // return Math.max(Math.max(Math.abs(x)-size, Math.abs(y)-size), Math.abs(z)-size);
-    return Math.sqrt(x * x + y * y + z * z) - size;
+//VERTEX_SHADER
+var vs=""+
+"attribute vec2 p;"+
+"void main(){"+
+"  gl_Position=vec4(p,0,1);"+
+"}";
+
+//FRAGMENT_SHADER
+var fs=""+
+//"#ifdef GL_ES"+
+"precision highp float;"+
+//"#endif"+
+""+
+"uniform float iGlobalTime;"+
+""+
+"vec2 iResolution=vec2("+a.width+","+a.height+");"+
+""+
+"float box(vec3 p, vec3 b, float size){" +
+"  return length(max(abs(p)-b,0.0)) - size;" +
+"}" +
+"" +
+"float cylinder(vec2 pos) {" +
+"    return length(pos) - 0.04;" +
+"}" +
+"" +
+"void main(void)" +
+"{" +
+"    vec2 uv = gl_FragCoord.xy / iResolution.xy - 0.5;" +
+"    uv.y *= 0.85;" +
+"" +
+"    float ratio = iResolution.x / iResolution.y;" +
+"    uv.x *= ratio;" +
+"" +
+"    vec3 ray = normalize(vec3(uv,0.5));" +
+"" +
+"    float t = 0.0;" +
+"    float d = 0.0;" +
+"    vec3 col;" +
+"" +
+"    for(int i = 0; i < 50; ++i){" +
+"        vec3 pos = ray*t;" +
+"        pos.z += iGlobalTime/4.0;" +
+"        pos = fract(pos) - 0.5;" +
+"" +
+"        d = box(pos, vec3(0.05, 0.05, 0.05), 0.04);" +
+"        col = vec3(1.0, 1.0, 0.0);" +
+"        float k = d;" +
+"        for (float j = 0.0; j < 3.0; j++) {" +
+"            float id = floor(fract(j/3.0)*3.0);" +
+"            if (id == 0.0) {" +
+"                k = cylinder(pos.xy);" +
+"            } else if (id == 1.0) {" +
+"                k = cylinder(pos.xz);" +
+"            } else if (id == 2.0) {" +
+"                k = cylinder(pos.yz);" +
+"            }" +
+"            if(k<d){" +
+"                d=k;" +
+"                col=vec3(0.2,1.0,0.1) * j / 0.2;" +
+"            }" +
+"        }" +
+"" +
+"        t+=d;" +
+"    }" +
+"" +
+"    float tint = 1.0 / (t*t*t);" +
+"    gl_FragColor = vec4(tint*col, 1.0);" +
+"}";
+
+function compileShader(g, shaderSource, shaderType) {
+  var shader=g.createShader(shaderType);
+  g.shaderSource(shader, shaderSource);
+  g.compileShader(shader);
+  //******** DEBUG ****************
+  var ok = g.getShaderParameter(shader,g.COMPILE_STATUS);
+  if (!ok) {throw "Shader Compile Error:" + g.getShaderInfoLog(shader);}
+  //******** DEBUG ****************
+  return shader;
 }
 
-
-boxes = [
-    [100, 50, 100],
-    [350, 50, 100]
-];
-
-function draw () {
-    t+=0.1;
-
-    i = 0;
-    eyeX = W / 2;
-    eyeY = H / 2;
-    eyeZ = -40;
-
-    // raymarch
-    for (x = 0; x < W; x++) {
-        for (y = 0; y < H; y++) {
-            var dx = (x - eyeX);
-            var dy = (y - eyeY);
-            var dz = (0 - eyeZ);
-            var len = Math.sqrt(dx * dx + dy * dy + dz * dz);
-            var rayDirection = [dx/len, dy/len, dz/len];
-
-          /*  stepX = (dx / len * step)* len / eyeZ * mul;
-            stepY = (dy / len * step)* len / eyeZ * mul;
-            stepZ = (dz / len * step)* len / eyeZ * mul;
-*/
-            rx = eyeX;
-            ry = eyeY;
-            rz = eyeZ;
-
-            var hit = false;
-            var step = 0;
-            var it = 0;
-            for (; rz < 255;) {
-                it++;
-                var dist = 10000000;
-                for (var b in boxes) {
-                    dist = Math.min(dist, sphere(rx - boxes[b][0] + 90 * Math.cos(t), ry - boxes[b][1], rz - boxes[b][2], 50));
-                }
-                if (dist < 5) {
-                    hit = true;
-                    break;
-                }
-                step += dist;// dist / 2;
-                rx = eyeX + rayDirection[0] * step;
-                ry = eyeY + rayDirection[1] * step;
-                rz = eyeZ + rayDirection[2] * step;
-            }
-
-            // console.log(it);
-
-            i = (x + y * W) * 4;
-
-            if (hit) {
-                pixels[i + 0] = 255;
-                pixels[i + 1] = it / 2;
-                pixels[i + 2] = 255;
-                pixels[i + 3] = 255;
-            } else {
-                pixels[i + 0] = 0;
-                pixels[i + 1] = 0;
-                pixels[i + 2] = 0;
-                pixels[i + 3] = 255;
-            }
-
-        }
-    }
-    c.putImageData(imageData, 0, 0);
+function createProgram(vertexShaderSource,fragmentShaderSource){
+  var p=g.createProgram();
+  g.attachShader(p,compileShader(g,vs,g.VERTEX_SHADER));
+  g.attachShader(p,compileShader(g,fs,g.FRAGMENT_SHADER));
+  g.linkProgram(p);
+  //******** DEBUG ****************
+  var ok= g.getProgramParameter(p,g.LINK_STATUS);
+  if (!ok){throw ("Shader Link Error:" +g.getProgramInfoLog(p));}
+  //******** DEBUG ****************
+  g.useProgram(p);
+  return p;
 }
 
-setInterval(draw, 16);
-// draw();
+//Create Shader
+var p=createProgram(vs,fs);
 
+//Set Shader vertex data
+var pLocation=g.getAttribLocation(p,"p");
+g.bindBuffer(g.ARRAY_BUFFER,g.createBuffer());
+g.bufferData(g.ARRAY_BUFFER,new Float32Array(
+  [-1,-1,
+    1,-1,
+   -1, 1,
+   -1, 1,
+    1,-1,
+    1, 1]),g.STATIC_DRAW);
+g.enableVertexAttribArray(pLocation);
+g.vertexAttribPointer(pLocation,2,g.FLOAT,false,0,0);
+
+//Set Shader time variable iGlobalTime
+var tLocation=g.getUniformLocation(p,"iGlobalTime");
+
+//Get Inicial Time
+var initTime=Date.now();
+
+//Render Frame loop
+function draw(){
+  //Set time
+  g.uniform1f(tLocation,(Date.now()-initTime)*0.001);
+  //Draw
+  g.drawArrays(g.TRIANGLES,0,6);
+  requestAnimationFrame(draw);
+}
+draw();
     </script>
     <script>
       (function(){var doc=document;var header=doc.getElementsByTagName("header")[0];var firstChild=header.firstChild;var p=doc.getElementsByClassName("p")[0];var n=doc.getElementsByClassName("n")[0];header.insertBefore(p,firstChild);header.insertBefore(n,firstChild);header.appendChild(doc.getElementsByTagName("p")[0])})();
