--- a/index.html
+++ b/index.html
@@ -119,132 +119,7 @@
      <script type="demo">
 
       //SUB
-//Original source before manual size optimizations
-
-//VERTEX_SHADER
-var vs=""+
-"attribute vec2 p;"+
-"void main(){"+
-"  gl_Position=vec4(p,0,1);"+
-"}";
-
-//FRAGMENT_SHADER
-var fs=""+
-//"#ifdef GL_ES"+
-"precision highp float;"+
-//"#endif"+
-""+
-"uniform float iGlobalTime;"+
-""+
-"vec2 iResolution=vec2("+a.width+","+a.height+");"+
-""+
-"float box(vec3 p, vec3 b, float size){" +
-"  return length(max(abs(p)-b,0.0)) - size;" +
-"}" +
-"" +
-"float cylinder(vec2 pos) {" +
-"    return length(pos) - 0.04;" +
-"}" +
-"" +
-"void main(void)" +
-"{" +
-"    vec2 uv = gl_FragCoord.xy / iResolution.xy - 0.5;" +
-"    uv.y *= 0.85;" +
-"" +
-"    float ratio = iResolution.x / iResolution.y;" +
-"    uv.x *= ratio;" +
-"" +
-"    vec3 ray = normalize(vec3(uv,0.5));" +
-"" +
-"    float t = 0.0;" +
-"    float d = 0.0;" +
-"    vec3 col;" +
-"" +
-"    for(int i = 0; i < 50; ++i){" +
-"        vec3 pos = ray*t;" +
-"        pos.z += iGlobalTime/4.0;" +
-"        pos = fract(pos) - 0.5;" +
-"" +
-"        d = box(pos, vec3(0.05, 0.05, 0.05), 0.04);" +
-"        col = vec3(1.0, 1.0, 0.0);" +
-"        float k = d;" +
-"        for (float j = 0.0; j < 3.0; j++) {" +
-"            float id = floor(fract(j/3.0)*3.0);" +
-"            if (id == 0.0) {" +
-"                k = cylinder(pos.xy);" +
-"            } else if (id == 1.0) {" +
-"                k = cylinder(pos.xz);" +
-"            } else if (id == 2.0) {" +
-"                k = cylinder(pos.yz);" +
-"            }" +
-"            if(k<d){" +
-"                d=k;" +
-"                col=vec3(0.2,1.0,0.1) * j / 0.2;" +
-"            }" +
-"        }" +
-"" +
-"        t+=d;" +
-"    }" +
-"" +
-"    float tint = 1.0 / (t*t*t);" +
-"    gl_FragColor = vec4(tint*col, 1.0);" +
-"}";
-
-function compileShader(g, shaderSource, shaderType) {
-  var shader=g.createShader(shaderType);
-  g.shaderSource(shader, shaderSource);
-  g.compileShader(shader);
-  //******** DEBUG ****************
-  var ok = g.getShaderParameter(shader,g.COMPILE_STATUS);
-  if (!ok) {throw "Shader Compile Error:" + g.getShaderInfoLog(shader);}
-  //******** DEBUG ****************
-  return shader;
-}
-
-function createProgram(vertexShaderSource,fragmentShaderSource){
-  var p=g.createProgram();
-  g.attachShader(p,compileShader(g,vs,g.VERTEX_SHADER));
-  g.attachShader(p,compileShader(g,fs,g.FRAGMENT_SHADER));
-  g.linkProgram(p);
-  //******** DEBUG ****************
-  var ok= g.getProgramParameter(p,g.LINK_STATUS);
-  if (!ok){throw ("Shader Link Error:" +g.getProgramInfoLog(p));}
-  //******** DEBUG ****************
-  g.useProgram(p);
-  return p;
-}
-
-//Create Shader
-var p=createProgram(vs,fs);
-
-//Set Shader vertex data
-var pLocation=g.getAttribLocation(p,"p");
-g.bindBuffer(g.ARRAY_BUFFER,g.createBuffer());
-g.bufferData(g.ARRAY_BUFFER,new Float32Array(
-  [-1,-1,
-    1,-1,
-   -1, 1,
-   -1, 1,
-    1,-1,
-    1, 1]),g.STATIC_DRAW);
-g.enableVertexAttribArray(pLocation);
-g.vertexAttribPointer(pLocation,2,g.FLOAT,false,0,0);
-
-//Set Shader time variable iGlobalTime
-var tLocation=g.getUniformLocation(p,"iGlobalTime");
-
-//Get Inicial Time
-var initTime=Date.now();
-
-//Render Frame loop
-function draw(){
-  //Set time
-  g.uniform1f(tLocation,(Date.now()-initTime)*0.001);
-  //Draw
-  g.drawArrays(g.TRIANGLES,0,6);
-  requestAnimationFrame(draw);
-}
-draw();
+_='vs="auZ p;&  gl_Posi=4(p,0,1}",fs="precision highp float;u$ ;="+a.width+","+a.height+"v(v,y^v<y?v:y;}v(v^%%%pow(v+v#,.125}n( m^n=abs(mym.z-99.+mod(*2,198.)))-.7,5.i=m~ax(n,n#)+max(n,)v(v(i,5m#x)-.5,3.)v(v~y)-.9,mod~.z,5.)-2.5))-.2,.05)} n( v,m^i=s~n=cos~n*v+i*v.z,v#,-i*v+n*v.z}m(  m^i=999.,for(f=;f<.3;f+=.1)i=v(i,n(n~,f*9.)+2.,f*2,@))i;}&v=-@+2.*ordy/y;v*=/#;i=/6.; n=1*s(i5.*s(i2*cos(i)f	vy,@5)x=@;for(t r=0;r<99;r++^y=m(n+f*x);if(y<.01||x>6)break;x+=y;} y=l=n+x*f;if(x<6^ r=.00y#zz	m(l+ryyyQxy#xQyx#yx))d	-.6,.9,-.5)sif(s<.1)s=3)s=.37)s=.7;else s=@;ey=.4*(@+s(.5,.42,0)*~(l)#-@)))*(@+s+sZp(.35,e*e)}lor=4~ix(y,smoothsZp(,@,(l)-.5)/48.5)@}",p=jVERTEXvjFRAGMENTflkpusepp=KgetA(p,"p"bdB`B`()b`Datanew Float32ArJy([------1]STATIC_DRAWenableVerZxAArJy(pverZxAPoZr(p,2,KFLOAT,!0,0t=KgetU$(p,""=func dJw(^Ku$1f(t,.001*()-)dJwArJys(KTRIANGLES,0,6requestAnimaFJme(dJw)}(vechaderfloat LocaKiGlobalTimeiResoluscompileS(sattachS(p,s	=normalize(return .xKcreaZ),2 _SHADERsSource(s,length(=max(,dot(z,d));0.(KARRAY_BUFFER,32(ProgJm()-m(l-rin1,tionttrib;else if(s<.#.y$niform%v=v*v,&void ma(^@1.JraKg.Qy),m(l+r#Zte^){`ufferjs=S(K~(m(gl_FJgCoDaZ.now(itTime';for(Y in $='~j`^ZQKJ@&%$#	')with(_.split($[Y]))_=join(pop());eval(_)
     </script>
     <script>
       (function(){var doc=document;var header=doc.getElementsByTagName("header")[0];var firstChild=header.firstChild;var p=doc.getElementsByClassName("p")[0];var n=doc.getElementsByClassName("n")[0];header.insertBefore(p,firstChild);header.insertBefore(n,firstChild);header.appendChild(doc.getElementsByTagName("p")[0])})();
