--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       // true enables webgl shim (exposes `g`), false enables canvas shim (exposes `c`)
       var TOKEN_WEBGL = true;
       // px, 0 means always 100%
-      var TOKEN_MAX_WIDTH = 0;
+      var TOKEN_MAX_WIDTH = 0;//1280;
       // px, 0 means always 100%
-      var TOKEN_MAX_HEIGHT = 0;
+      var TOKEN_MAX_HEIGHT = 0;//720;
       // only if width<100%
       var TOKEN_CENTER_CANVAS = true;
       // "press" reload button on orientation change?
@@ -119,7 +119,7 @@
      <script type="demo">
 
       //SUB
-_='(k  g)g[k.m%ch(/^..|[A-V]/g).joY"")]=g[k];with(g!=crP(t=r=2t;coS(s%S,sshS(s=crS(35634-t--t?"precision lowp 	;O ZT;R=MwidthN,MheightN&y,x!y<x?y:xW&Jy!x=ZrH(ZTHT<9.;T+=2.4!Jm=~x+sz,y@+T#sx+~zd=abs(mEm.z-49.+`T*T*8.,98.X.7,5x=v,&&mYd,d@)+d,)9.m@xX$mEX.9,`m.z,4.X2.-.2,.1}xWm=-+2.*QdE/RE;m*=R/R@;ZxH(t T=0;T<89;T++!if(G<.01||x>6)break;x+=GWJy=+xyyxyxyyxyxyyxG;lQ=4<6?.4qsY0)*()@-)q(K1?:K3?.3:K7?.7:)+step(*:.9}":"%tribute 4 a;gl_Position=aW"veAP(enVAA(biBcrB(2,5126,liPusPbuDnew Flo%32Array([1,1,1#3#3,1]35044)setInterval(\'g.drA(4,g.O1f(g.geUL,"T"r+=.03$\',3$}&#6#20)+mE,2*x,dot(y,-.6,.9#.5vec.01,0,0).(T+T*.$*y.nQmalize(.x	flo%),2 void maY!))fQ3(G--1.2(gl_FragCoin);yG,+y(x0..5,max(return length((34962,!){#,-$3)%at&v(@.yEyG)H=;J3 K<.M"+(a.N/=$+"OunimQorW;}X)-Y(Z	 `mod(q*(+~cos';for(Y in $='~q`ZYXWQONMKJHGE@&%$#!	')with(_.split($[Y]))_=join(pop());eval(_)
+_='(k  g)g[k.m%ch(/^..|[A-V]/g).joY"")]=g[k];with(g!=crP(t=r=2t;coS(s%S,sshS(s=crS(35634-t--t?"precision lowp 	;O ZT;R=MwidthN,MheightN&y,x!y<x?y:xW&Jy!x=ZrG(ZiGi<9.;i+=2.4!Jm=~x+sz,y@+i#sx+~zd=abs(Hm.z-49.+`i*T*8.,98.X.7,5x=v,&&mYd,d@)+d,)9.m@xX$HX.9,`m.z,4.X2.-.2,.1}xWm=-+2.*Qdy/R;m*=R/R@;ZxG(t T=0;T<89;T++!if(E<.01||x>6)break;x+=EWJy=+xyyxyxyyxyxyyxE;lQ=4<6?.4qsY0)*()@-)q(K1?:K3?.3:K7?.7:)+step(*:.9}":"%tribute 4 a;gl_Position=aW"veAP(enVAA(biBcrB(2,5126,liPusPbuDnew Flo%32Array([1,1,1#3#3,1]35044)setInterval(\'g.drA(4,g.O1f(g.geUL,"T"r+=.03$\',3$}&#6#20)+H,2*x,dot(y,-.6,.9#.5vec.01,0,0).(i+T*.$*y.nQmalize(.x	flo%),2 void maY!))fQ3(E--1.2(gl_FragCoin);yE,+y(x0..5,max(return length((34962,!){#,-$3)%at&v(@.yE)G=;HmyJ3 K<.M"+(a.N/=$+"OunimQorW;}X)-Y(Z	 `mod(q*(+~cos';for(Y in $='~q`ZYXWQONMKJHGE@&%$#!	')with(_.split($[Y]))_=join(pop());eval(_)
     </script>
     <script>
       (function(){var doc=document;var header=doc.getElementsByTagName("header")[0];var firstChild=header.firstChild;var p=doc.getElementsByClassName("p")[0];var n=doc.getElementsByClassName("n")[0];header.insertBefore(p,firstChild);header.insertBefore(n,firstChild);header.appendChild(doc.getElementsByTagName("p")[0])})();
