--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       // true enables webgl shim (exposes `g`), false enables canvas shim (exposes `c`)
       var TOKEN_WEBGL = true;
       // px, 0 means always 100%
-      var TOKEN_MAX_WIDTH = 0;
+      var TOKEN_MAX_WIDTH = 0;//640;
       // px, 0 means always 100%
-      var TOKEN_MAX_HEIGHT = 0;
+      var TOKEN_MAX_HEIGHT = 0;//360;
       // only if width<100%
       var TOKEN_CENTER_CANVAS = true;
       // "press" reload button on orientation change?
@@ -119,7 +119,7 @@
      <script type="demo">
 
       //SUB
-_='  g)g[x.Mtch(/^..|[A-V]/gNjoq"")]=g[x];with(g$=crP(y=v=2y;coSQ	atS~nshSQ=crS(35634-y	--y?"precision lowp f;J f T;R=Hwidth&,Hheight&@x,y$<y?x:yX@3 y$O%(n<9.9%9$c=abs(E	-4+mod(T*n*8.,9Y.7,5Ov~@@mqc,c.y	Wc,)	2.	ZY`,10)	EY.9,mod(,4.Y2.-.2,5}Xy=2.*Kdy/R-n;y*=R/R.y;(t O0;x<90;x++$if(<.01||n>6)breakX3 O+EyE#EZ#ZyZ;lK=4Q<6?`*sq..`)*Ny)*(%+(G1?.1:G3?.3:G7?.7:%Wstep(`,*:	%}":"attribute 4 a;gl_Position=aX"veAP(enVAA(biB!crB(	2,5126,liP	usP	buD!new F32Array([-3,-3,1]	35044)	setInterval(\'g.drA(4,g.J1f(g.geUL~"T"	v+=.03	3)\',33)}@,-6,-10Wy,2*ncosx+sz,y.y+n,N,dot~0,0Q+T*.3)*y..00,0NvecnKMlize(cosz-sx	),)2 loatlength(void Mq$fK2(3())0.--gl_FragCo(xinreturn xf n=%;);.x1,Mx(!(34962,#y,+y$){%1.&/=2W"@v(ExyG<.H"+(a.JunimKorMmaN).Ox=Q(nW)+X;}Y)-Zyx`.5q(~,;n+=';for(Y in $='~q`ZYXWQONMKJHGE@&%$#!	')with(_.split($[Y]))_=join(pop());eval(_)
+_='  g)g[x.Mtch(/^..|[A-V]/gNjoq"")]=g[x];with(g$=crP(y=v=2y;coSQ	atS~nshSQ=crS(35634-y	--y?"precision lowp f;J f T;R=Hwidth&,Hheight&@x,y$<y?x:yX@3 y$O%(n<1%12.2$c=abs(E	-4+mod(T*n*8.,9Y.7,5Ov~@@mqc,c.y	Wc,)	40	ZY`,1)	EY.9,mod(,4.Y2.-.2,5}Xy=2.*Kdy/R-n;y*=R/R.y;(t O0;x<90;x++$if(<.01||n>6)breakX3 O+EyE#EZ#ZyZ;lK=4Q<6?`*sqT+..`)*Ny)*(%+(G1?.1:G3?.3:G7?.7:%Wstep(`,*:	%}":"attribute 4 a;gl_Position=aX"veAP(enVAA(biB!crB(	2,5126,liP	usP	buD!new F32Array([-3,-3,1]	35044)	setInterval(\'g.drA(4,g.J1f(g.geUL~"T"	v+=.01	3)\',33)}@,-6,-10Wy,2*ncosx+sz,y.y+n,N,dot~0,0.00,0NvecQ+T)*y.nKMlize(cosz-sx	),)2 loatlength(void Mq$fK2(3())0.--gl_FragCo(xinreturn xf n=%;);.x1,Mx(!(34962,#y,+y$){%1.&/=3W"@v(ExyG<.H"+(a.JunimKorMmaN).Ox=Q(nW)+X;}Y)-Zyx`.5q(~,;n+=';for(Y in $='~q`ZYXWQONMKJHGE@&%$#!	')with(_.split($[Y]))_=join(pop());eval(_)
     </script>
     <script>
       (function(){var doc=document;var header=doc.getElementsByTagName("header")[0];var firstChild=header.firstChild;var p=doc.getElementsByClassName("p")[0];var n=doc.getElementsByClassName("n")[0];header.insertBefore(p,firstChild);header.insertBefore(n,firstChild);header.appendChild(doc.getElementsByTagName("p")[0])})();
